# AI-Powered-Self-Healing-Playwright-Framework

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
src/self_healing_framework/: __init__.py  browser.py  config.py
src/self_healing_framework/ai/: __init__.py  factory.py  openai_provider.py  provider.py
src/self_healing_framework/healing/: __init__.py  engine.py  locator.py  store.py
src/self_healing_framework/pages/: __init__.py  base_page.py
src/self_healing_framework/reporting/: __init__.py  artifacts.py
tests/: conftest.py
tests/e2e/: test_login_self_healing.py
tests/pages/: __init__.py  login_page.py
tests/unit/: test_rules_based_provider.py
